Add logout route
