# api.yaml
@@ -696,6 +696,23 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/InternalServerError'
+  # Logout
+  /account/logout:
+    post:
+      tags:
+        - Account
+      security:
+        - AccessToken: [ ]
+      summary: Log out the currently logged in user.
+      responses:
+        '200':
+          description: OK
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
   #
 
 components:
