# src/routes/account/index.ts
@@ -4,6 +4,7 @@ import login from './login';
 import refresh from './refresh';
 import settings from './settings';
 import info from './info';
+import logout from './logout';
 
 const router = Router();
 
@@ -12,5 +13,6 @@ router.use('/login', login);
 router.use('/refresh', refresh);
 router.use('/settings', settings);
 router.use('/info', info);
+router.use('/logout', logout);
 
 export default router;
